# indic_seamless_service

./: .flake8  .gitignore  DEPENDENCIES.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  app.py  app_structured.py  cleanup_aws_resources.py  client_example.py  deploy-local.sh  deploy_free_tier.py  docker-compose.free-tier.yml  env.example  pyproject.toml  pyrightconfig.json  requirements.txt  run-local.sh  start_service.py  workflow_test.py
aws/: cloudformation.yaml  deploy-free-tier.sh  deploy.sh
aws/lambda/: Dockerfile  cloudformation-lambda.yaml  deploy-lambda.sh  handler.py  requirements-lambda.txt
docs/: AWS_DEPLOYMENT_GUIDE.md  DOCKER_TROUBLESHOOTING.md  FREE_TIER_DEPLOYMENT.md  LAMBDA_DEPLOYMENT.md  README.md  STRUCTURED_ARCHITECTURE.md  TROUBLESHOOTING.md  WORKFLOWS.md
env/: activate.sh  benchmark.py  requirements.in  requirements.txt  setup.sh
examples/: __init__.py  client_example.py  test_enum_display.py
sagemaker/: client_example.py  deploy.py  inference.py
scripts/: deploy-local.sh  run-local.sh
src/: __init__.py
src/api/: __init__.py  app.py  routes.py
src/config/: __init__.py  languages.py  settings.py
src/types/: __init__.py  models.py  schemas.py
src/utils/: __init__.py  audio.py  logging.py  model.py
terraform/: main.tf
tests/: __init__.py  test_service.py  workflow_test.py
